# context-engineering-intro

./: INITIAL.md
PRPs/: linkedin-job-agent.md
linkedin-job-agent/: .env.example  .gitignore  README.md  analyze_all_items.py  analyze_match.py  connect_existing_browser.sh  count_all_jobs.py  debug_jobs.py  debug_matching.py  download_and_analyze_html.py  extract_jobs.py  inspect_job_structure.py  launch_visible_browser.sh  pyproject.toml  quick_start.md  resume.txt  run_job_search.sh  test_ai_extraction.py  test_background.py  test_browser_connection.py  test_claude_large.py  test_complete_pipeline.py  test_components.py  test_db.py  test_human_flow.py  test_login_update.py  test_oauth_load.py  test_pipeline_steps.py  test_pipeline_updated.py
linkedin-job-agent/docker/: docker-compose.yml  init.sql
linkedin-job-agent/src/: config.py  main.py
linkedin-job-agent/src/ai/: claude_client.py
linkedin-job-agent/src/database/: models.py  repository.py
linkedin-job-agent/src/linkedin/: browser.py  human_flow.py  scraper.py  stealth.py
linkedin-job-agent/src/matching/: filters.py  scorer.py
linkedin-job-agent/src/resume/: ai_parser.py  analyzer.py  parser.py
linkedin-job-agent/src/utils/: claude_utils.py  html_utils.py  json_utils.py  logger.py  rate_limiter.py
linkedin-job-agent/tests/: conftest.py  test_basic.py
